Correctly detect inter-resource moves

When comparing the source and destination resources, the item
already has the destination collection and resource  set, so
we need to compare it with the source resource

BUG: 328298
FIXED-IN: 1.11.1